--- a/src/App.module.css
+++ b/src/App.module.css
@@ -20,3 +20,9 @@
 .App-link {
   color: #09d3ac;
 }
+
+.wrap {
+  width: 100%;
+  min-height: 20vh;
+  background: linear-gradient(45deg, #FDFF73, #C5DDE8);
+}
