Небольшая стилизация компонента Statistic.

--- a/src/components/LogoComponent.module.css
+++ b/src/components/LogoComponent.module.css
@@ -1,160 +1,9 @@
 .nameProduct {
-  font-family: 'Anton', sans-serif;
-  color: #4e6526;
-  position: absolute;
-  top: 72%;
-  left: 41%;
-  width: 200px;
-  font-size: 70px;
-}
-
-.avocado {
-  height: 220px;
-  width: 200px;
-  position: absolute;
-  top: calc(55% - 140px);
-  left: calc(50% - 100px);
-}
-
-.avocado_scine {
-  width: 200px;
-  height: 220px;
-  background-color: #4e6526;
-  border-radius: 50%;
-  display: block;
-  position: absolute;
-  filter: url('#gooey');
-}
-
-.avocado_scine:before {
-  position: absolute;
-  width: 60%;
-  height: 43%;
-  content: "";
-  background-color: #4e6526;
-  top: -25%;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 50%;
-}
-
-.avocado__inner_shadow {
-  width: 185px;
-  height: 208px;
-  background-color: #96c93a;
-  border-radius: 50%;
-  display: block;
-  position: absolute;
-  filter: url('#gooey');
-  top: 2px;
-  left: 8px;
-}
-
-.avocado__inner_shadow:before {
-  position: absolute;
-  width: 60%;
-  height: 43%;
-  content: "";
-  background-color: #96c93a;
-  top: -25%;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 50%;
-}
-
-.avocado__inner {
-  width: 153px;
-  height: 173px;
-  background-color: #afd64d;
-  border-radius: 50%;
-  display: block;
-  position: absolute;
-  filter: url('#gooey');
-  top: 10px;
-  left: 22px;
-}
-.avocado__inner:before {
-  position: absolute;
-  width: 60%;
-  height: 43%;
-  content: "";
-  background-color: #afd64d;
-  top: -25%;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 50%;
-}
-
-.avocado__seed {
-  position: absolute;
-  width: 120px;
-  height: 120px;
-  background-color: #936549;
-  border-radius: 50%;
-  top: 50px;
-  left: 40px;
-  overflow: hidden;
-}
-
-.avocado__seed:after {
-  content: "";
-  position: absolute;
-  width: 91px;
-  height: 93px;
-  background-color: #c9905f;
-  border-radius: 50%;
-  top: 10px;
-  left: 15px;
-}
-
-.avocado__seed_highlight {
-  background-color: #edbd86;
-  width: 20px;
-  height: 22px;
-  border-radius: 50%;
-  position: absolute;
-  transform: rotate(17deg);
-  top: 80px;
-  left: 67px;
-}
-
-.avocado__eye {
-  width: 20px;
-  height: 20px;
-  background-color: #1e2200;
-  border-radius: 50%;
-  top: 100px;
-  position: absolute;
-}
-
-.avocado__eyeLeft {
-  left: 56px;
-}
-
-.avocado__eyeRight {
-  right: 60px;
-}
-
-.avocado__smile {
-  width: 50px;
-  height: 10px;
-  position: absolute;
-  top: 120px;
-  left: 89px;
-  overflow: hidden;
-}
-
-.avocado__smile:before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 29px;
-  border: 3px solid #1e2200;
-  border-radius: 70%;
-  top: -28px;
-}
-
-@keyframes rotation {
-    from {opacity: 0;}
-    to {opacity: 1;}
+	font-family: 'Montserrat', sans-serif;
+	color: #4e6526;
+	position: absolute;
+	top: 76%;
+	left: 35%;
+	width: 200px;
+	font-size: 70px;
 }
