--- a/src/components/LogoComponent.module.css
+++ b/src/components/LogoComponent.module.css
@@ -1,9 +1,9 @@
 .nameProduct {
-	font-family: 'Montserrat', sans-serif;
-	color: #4e6526;
-	position: absolute;
-	top: 76%;
-	left: 35%;
-	width: 200px;
-	font-size: 70px;
+  font-family: "Montserrat", sans-serif;
+  color: #4e6526;
+  position: absolute;
+  top: 76%;
+  left: 35%;
+  width: 200px;
+  font-size: 70px;
 }
