--- a/src/components/MenuComponent.module.css
+++ b/src/components/MenuComponent.module.css
@@ -1,59 +1,60 @@
 .head__top {
-	height: 40px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 90%;
-	margin: 0 auto;
-	font-family: 'Anton', sans-serif;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+  font-family: "Anton", sans-serif;
 }
 
 .header__logo {
-	font-size: 30px;
-	font-weight: 700;
-	color: #4e6526;
-
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  color: #4e6526;
 }
 
 .line {
-	width: 25%;
-	height: 5px;
-	background-color: #4e6526;
+  width: 25%;
+  height: 5px;
+  background-color: #4e6526;
 }
 
 /*Nav*/
 .nav {
-	font-size: 14px;
-	text-transform: uppercase;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .nav__link {
-	display: inline-block;
-	vertical-align: top;
-	margin: 0 15px;
-	position: relative;
-	color: #fff;
-	text-decoration: none;
-	transition: color .1s linear;
+  letter-spacing: 1px;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 15px;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.1s linear;
 }
 
 .nav__link:after {
-	content: "";
-	display: none;
-	width: 100%;
-	height: 3px;
-	background-color: #96c93a;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	z-index: 1;
-	transition: opacity 0.1s linear;
+  content: "";
+  display: none;
+  width: 100%;
+  height: 3px;
+  background-color: #96c93a;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  transition: opacity 0.1s linear;
 }
 
 .nav__link:hover {
-	color: #96c93a;
+  color: #96c93a;
 }
 
 .nav__link:hover:after {
-	display: block;
+  display: block;
 }
