--- a/src/components/calculator/calculator.scss
+++ b/src/components/calculator/calculator.scss
@@ -1,112 +1,123 @@
 .calculator {
-	height: 300px;
-	width: 300px;
-	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	&_footer {
-		display: flex;
-		justify-content: space-around;
-		margin-top: 20px;
-	}
-	&_input {
-		display: flex;
-		justify-content: space-around;
-	}
+  height: 300px;
+  width: 300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &_footer {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+  }
+
+  &_input {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 .list_products {
-	width: 80%;
-	list-style-type: none;
-	margin: 0 auto;
-	font-family: 'Montserrat', sans-serif;
-	color: #006400;
-	&_head {
-		width: 80%;
-		display: flex;
-		justify-content: space-between;
-		text-transform: uppercase;
-		font-weight: 800;
-		border-bottom: 2px solid #006400;
-	}
-	&_item {
-		display: flex;
-		justify-content: space-between;
-	}
+  width: 80%;
+  list-style-type: none;
+  margin: 0 auto;
+  font-family: "Montserrat", sans-serif;
+  color: #006400;
+
+  &_head {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    font-weight: 800;
+    border-bottom: 2px solid #006400;
+  }
+
+  &_item {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
-
 .cube-loader-own {
-	align-items: center;
-	display: flex;
-	height: 50%;
-	width: 100%;
-	position: fixed;
-	.caption {
-		margin: 0 auto;
-	}
-	.cube-loader {
-		width: 73px;
-		height: 73px;
-		margin: 0 auto;
-		margin-top: 49px;
-		position: relative;
-		transform: rotateZ(45deg);
-		.cube {
-			position: relative;
-			transform: rotateZ(45deg);
-			width: 50%;
-			height: 50%;
-			float: left;
-			transform: scale(1.1);
-			&:before {
-				content: "";
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-color: #8bc34a;
-				animation: cube-loader 2.76s infinite linear both;
-				transform-origin: 100% 100%;	
-			}
-		}
-		.loader-2 {
-			transform: scale(1.1) rotateZ(90deg);
-			&:before {
-				animation-delay: 0.35s;
-			}
-		}
-		.loader-3 {
-			transform: scale(1.1) rotateZ(180deg);
-			&:before {
-				animation-delay: 0.69s;
-			}
-		}
-		.loader-4 {
-			transform: scale(1.1) rotateZ(270deg);
-			&:before {
-				animation-delay: 1.04s;
-			}
-		}
+  align-items: center;
+  display: flex;
+  height: 50%;
+  width: 100%;
+  position: fixed;
 
-	}
+  .caption {
+    margin: 0 auto;
+  }
 
+  .cube-loader {
+    width: 73px;
+    height: 73px;
+    margin: 0 auto;
+    margin-top: 49px;
+    position: relative;
+    transform: rotateZ(45deg);
+
+    .cube {
+      position: relative;
+      transform: rotateZ(45deg);
+      width: 50%;
+      height: 50%;
+      float: left;
+      transform: scale(1.1);
+
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #8bc34a;
+        animation: cube-loader 2.76s infinite linear both;
+        transform-origin: 100% 100%;
+      }
+    }
+
+    .loader-2 {
+      transform: scale(1.1) rotateZ(90deg);
+      &:before {
+        animation-delay: 0.35s;
+      }
+    }
+
+    .loader-3 {
+      transform: scale(1.1) rotateZ(180deg);
+      &:before {
+        animation-delay: 0.69s;
+      }
+    }
+
+    .loader-4 {
+      transform: scale(1.1) rotateZ(270deg);
+      &:before {
+        animation-delay: 1.04s;
+      }
+    }
+  }
 }
 
 @keyframes cube-loader {
-	0%, 10% {
-		transform: perspective(136px) rotateX(-180deg);
-		opacity: 0;
-	}
+  0%,
+  10% {
+    transform: perspective(136px) rotateX(-180deg);
+    opacity: 0;
+  }
 
-	25%, 75% {
-		transform: perspective(136px) rotateX(0deg);
-		opacity: 1;
-	}
+  25%,
+  75% {
+    transform: perspective(136px) rotateX(0deg);
+    opacity: 1;
+  }
 
-	90%, 100% {
-		transform: perspective(136px) rotateY(180deg);
-		opacity: 0;
-	}
+  90%,
+  100% {
+    transform: perspective(136px) rotateY(180deg);
+    opacity: 0;
+  }
 }
