--- a/src/components/items/input/input.scss
+++ b/src/components/items/input/input.scss
@@ -1,24 +1,24 @@
 .input {
-	width: 140px;
-	height: 40px;
-	border: solid 1px #8bc34a;
-	background-color: rgba(0, 0, 0, 0);
-	font-size: 14px;
-	letter-spacing: 0.28px;
-  	color: #878786;
-  	padding-left: 3.4%;
-  	border-radius: 2px;	
-  	margin-top: 5px;
-  	&_label {
-		font-family: 'Anton', sans-serif;
-  		width: 140px;
-  		color: white;
-  	}
+  width: 140px;
+  height: 40px;
+  border: solid 1px #8bc34a;
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 14px;
+  letter-spacing: 0.28px;
+  color: #878786;
+  padding-left: 3.4%;
+  border-radius: 2px;
+  margin-top: 5px;
+  &_label {
+    font-family: "Anton", sans-serif;
+    width: 140px;
+    color: white;
+  }
 }
 
 .div_input {
   width: 150px;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column-reverse; 
+  flex-direction: column-reverse;
 }
