--- a/src/components/statistic/statistic.scss
+++ b/src/components/statistic/statistic.scss
@@ -1,24 +1,23 @@
-.progress
-{
+.progress {
   width: 80%;
   font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   position: relative;
   overflow: hidden;
   &-bar {
     overflow: hidden;
-    background: white;
+    background: rgb(216, 216, 216);
     width: 0;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    transition: width 1s linear;  
+    transition: width 1s linear;
     &:after {
-      background-color: #006400;
+      background-color: #1b381c;
       background-size: 40px 40px;
       position: absolute;
-      content: '';
+      content: "";
       top: 0;
       left: 0;
       width: 100%;
@@ -36,16 +35,15 @@
     text-align: center;
   }
   &-bg {
-    background: white;
+    background: rgb(233, 233, 233);
     position: relative;
     height: 8px;
     border-radius: 5px;
-    overflow: hidden;  
+    overflow: hidden;
   }
 }
 
-.progress progress
-{
+.progress progress {
   position: absolute;
   width: 0;
   height: 0;
@@ -54,54 +52,55 @@
 }
 
 @for $i from 0 through 100 {
-  .progress progress[value="#{$i}"]
-  {
-    & + .progress-value:before { content : '#{$i}%' }
-    & ~ .progress-bg .progress-bar { width: $i * 1% }
+  .progress progress[value="#{$i}"] {
+    & + .progress-value:before {
+      content: "#{$i}%";
+    }
+    & ~ .progress-bg .progress-bar {
+      width: $i * 1%;
+    }
   }
 }
 
 .statistic {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
   &_other {
     display: flex;
-    width: 70%;
+    flex-wrap: wrap;
+    width: 25%;
     height: 100px;
-    justify-content: center;
     align-items: center;
     margin: 0 auto;
+  }
+  &_footer {
+    margin-top: 10%;
+    display: flex;
+    justify-content: space-around;
   }
 }
 
 .text {
-  font-family: 'Montserrat', sans-serif;
-  color: white;
+  font-family: "Montserrat", sans-serif;
+  color: #1b381c;
   margin: 0 auto;
   width: 600px;
   text-align: center;
   font-size: 64px;
-  color: #006400;
+  letter-spacing: 3px;
   font-weight: bold;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   &__small {
-    margin-top: 50px;
-    width: 350px;
-    font-size: 20px;
+    width: 300px;
+    font-size: 14px;
+    margin-top: 2%;
   }
   &__first {
-    margin-left: 5%;
-    margin-bottom: 5px;
+    margin-top: 1%;
+    font-size: 20px;
+    width: 350px;
   }
-
 }
 .out_statistic {
-  margin-top: 5%;
-}
-
-p {
-  font-family: 'Montserrat', sans-serif;
-  color:  #006400;
-  font-weight: bold;
+  margin-top: 7%;
 }
