--- a/src/components/config/config.scss
+++ b/src/components/config/config.scss
@@ -1,24 +1,19 @@
 .config {
   display: flex;
   justify-content: space-around;
-  &_show {
-    margin-top: 10%;
-    width: 20%;
-    background-color: #4e6526;
-    border-radius: 5px;
-    height: 300px;
-    p {
-      color: white;
-      font-family: "Anton", sans-serif;
-      margin-top: 8%;
-      margin-left: 5%;
-    }
-  }
+  padding-top: 100px;
+  
   &_form {
-    width: 40%;
-    padding-left: 40px;
-    padding-top: 40px;
-    padding-bottom: 30px;
+    width: 55%;
+    padding-top: 50px;
     border-radius: 10px;
+    background-color: #484949;
+  }
+
+  &_input {
+    justify-content: space-around;
+    display: flex;
+    margin: 10px 10px;
+    margin-bottom: 30px;
   }
 }
